fix: button border on mobile devices

--- a/src/views/transactions/ui/transactions-page.module.scss
+++ b/src/views/transactions/ui/transactions-page.module.scss
@@ -351,5 +351,7 @@
     background: none;
     outline: none;
     box-shadow: none;
+
+    -webkit-tap-highlight-color: transparent;
   }
 }
